# interactive_html_plots

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/_source/: conf.py  figure_1.rst  figure_2.rst  index.rst
src/interactive_html_plots/: __about__.py  __init__.py  main.py
